Name:                angularjs-todo
Version:             0.1
Synopsis:            Example of using Angular js with Snap & SQLite
License:             BSD3
License-file:        LICENSE
Author:              Janne Hellsten
Maintainer:          Janne Hellsten <jjhellst@gmail.com>
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable angularjs-todo
  hs-source-dirs: src
  main-is:        Main.hs

  Build-depends:
    base >= 4 && < 5,
    aeson   (>= 0.6 && < 0.7) || (>= 0.7.0.4 && < 0.8),
    bytestring >= 0.9.1 && < 0.11,
    heist == 0.13.*,
    lens >= 3.7.6 && < 4.2,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl >= 2 && < 3,
    snap >= 0.13,
    snap-core >= 0.9,
    snap-extras >= 0.6,
    snap-server,
    snap-loader-static,
    snaplet-sqlite-simple >= 0.4 && < 1.0,
    sqlite-simple >= 0.4 && < 1.0,
    text,
    either  >= 3 && <= 4.4,
    errors  == 1.4.*

  if flag(development)
    build-depends:
      snap-loader-dynamic >= 0.9 && < 0.11
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans
